--- a/index.html
+++ b/index.html
@@ -3,110 +3,142 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Retro Portfolio</title>
+  <title>Clean Portfolio</title>
+  <!-- Bootstrap CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* General Styles */
+    /* Global Styles */
     body {
-      font-family: 'Press Start 2P', cursive;
-      background-color: #121212;
-      color: #f2eecb;
-      text-align: center;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      image-rendering: pixelated;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
-    h1, h2, p {
-      margin: 10px 0;
+    .light-mode {
+      background-color: #f8f9fa;
+      color: #212529;
     }
-
-    /* Retro Button */
-    .retro-btn {
-      font-size: 14px;
-      color: #fff;
-      background-color: #4361ee;
-      border: 3px solid #f72585;
-      padding: 10px 20px;
-      cursor: pointer;
-      box-shadow: 0px 0px 10px #f72585;
-      text-transform: uppercase;
-    }
-    .retro-btn:hover {
-      background-color: #f72585;
-      border-color: #4361ee;
-      box-shadow: 0px 0px 15px #4361ee;
+    .dark-mode {
+      background-color: #212529;
+      color: #f8f9fa;
     }
 
-    /* Retro Card */
-    .retro-card {
-      border: 4px solid #4361ee;
-      box-shadow: 0px 0px 12px #4361ee;
-      margin: 20px auto;
-      padding: 20px;
-      max-width: 500px;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.8);
+    /* Glassmorphism Navbar */
+    .navbar {
+      backdrop-filter: blur(10px);
+      background-color: rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      transition: background-color 0.3s ease, border-color 0.3s ease;
+    }
+    .dark-mode .navbar {
+      background-color: rgba(0, 0, 0, 0.6);
+      border-color: rgba(255, 255, 255, 0.1);
     }
 
-    /* Dither Effect */
-    .dithered {
-      filter: contrast(200%) brightness(80%);
+    /* Sections */
+    section {
+      padding: 80px 20px;
     }
 
-    /* Flicker Animation */
-    @keyframes flicker {
-      0% { opacity: 1; }
-      50% { opacity: 0.8; }
-      100% { opacity: 1; }
-    }
-    h1 {
-      animation: flicker 0.3s infinite;
+    .projects img {
+      width: 100%;
+      border-radius: 10px;
     }
 
     /* Footer */
     footer {
-      margin-top: 20px;
-      font-size: 12px;
-      color: #888;
+      text-align: center;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.1);
+    }
+    .dark-mode footer {
+      background: rgba(255, 255, 255, 0.1);
     }
   </style>
 </head>
-<body class="dithered">
-  <!-- Header -->
-  <h1>My Retro Portfolio</h1>
+<body class="light-mode">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Portfolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+        <button class="btn btn-outline-light ms-3" id="modeToggle">Dark Mode</button>
+      </div>
+    </div>
+  </nav>
 
-  <!-- About Me Section -->
-  <div class="retro-card">
-    <h2>About Me</h2>
-    <p>Welcome to my retro-inspired site! I'm a designer with a love for 80s aesthetics and digital art.</p>
-  </div>
+  <!-- About Section -->
+  <section id="about" class="text-center">
+    <div class="container">
+      <h1>About Me</h1>
+      <p>Hello! I'm a web developer passionate about creating clean, responsive designs.</p>
+    </div>
+  </section>
 
   <!-- Projects Section -->
-  <div class="retro-card">
-    <h2>Projects</h2>
-    <p>Check out my projects below:</p>
-    <ul>
-      <li><a href="#" style="color: #4cc9f0;">Project 1</a></li>
-      <li><a href="#" style="color: #4cc9f0;">Project 2</a></li>
-      <li><a href="#" style="color: #4cc9f0;">Project 3</a></li>
-    </ul>
-  </div>
+  <section id="projects" class="projects">
+    <div class="container">
+      <h2 class="text-center mb-4">Projects</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="https://via.placeholder.com/300" alt="Project 1">
+          <h5 class="mt-2">Project 1</h5>
+          <p>Short description of the project.</p>
+        </div>
+        <div class="col-md-4">
+          <img src="https://via.placeholder.com/300" alt="Project 2">
+          <h5 class="mt-2">Project 2</h5>
+          <p>Short description of the project.</p>
+        </div>
+        <div class="col-md-4">
+          <img src="https://via.placeholder.com/300" alt="Project 3">
+          <h5 class="mt-2">Project 3</h5>
+          <p>Short description of the project.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <!-- Dither Toggle Button -->
-  <button class="retro-btn" id="toggle-dither">Undither</button>
+  <!-- Contact Section -->
+  <section id="contact" class="text-center">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Feel free to reach out for collaborations or inquiries!</p>
+      <a href="mailto:example@example.com" class="btn btn-primary">Email Me</a>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 My Retro Portfolio. All Rights Reserved.</p>
+    <p>&copy; 2024 My Portfolio. All rights reserved.</p>
   </footer>
 
-  <script>
-    // Toggle Dither Effect
-    const body = document.body;
-    const toggleBtn = document.getElementById('toggle-dither');
+  <!-- Bootstrap JS CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    toggleBtn.addEventListener('click', () => {
-      body.classList.toggle('dithered');
-      toggleBtn.textContent = body.classList.contains('dithered') ? 'Undither' : 'Dither';
+  <!-- JavaScript for Dark/Light Mode -->
+  <script>
+    const modeToggle = document.getElementById('modeToggle');
+    const body = document.body;
+
+    modeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark-mode');
+      body.classList.toggle('light-mode');
+      modeToggle.textContent = body.classList.contains('dark-mode') ? 'Light Mode' : 'Dark Mode';
     });
   </script>
 </body>
