--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clean Portfolio</title>
+  <title>Portfolio with Dark/Light Mode</title>
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -15,15 +15,15 @@
       transition: background-color 0.3s ease, color 0.3s ease;
     }
     .light-mode {
-      background-color: #f8f9fa;
+      background-color: #ffffff;
       color: #212529;
     }
     .dark-mode {
-      background-color: #212529;
+      background-color: #121212;
       color: #f8f9fa;
     }
 
-    /* Glassmorphism Navbar */
+    /* Navbar */
     .navbar {
       backdrop-filter: blur(10px);
       background-color: rgba(255, 255, 255, 0.1);
@@ -38,11 +38,6 @@
     /* Sections */
     section {
       padding: 80px 20px;
-    }
-
-    .projects img {
-      width: 100%;
-      border-radius: 10px;
     }
 
     /* Footer */
@@ -95,17 +90,17 @@
       <h2 class="text-center mb-4">Projects</h2>
       <div class="row">
         <div class="col-md-4">
-          <img src="https://via.placeholder.com/300" alt="Project 1">
+          <img src="https://via.placeholder.com/300" alt="Project 1" class="img-fluid">
           <h5 class="mt-2">Project 1</h5>
           <p>Short description of the project.</p>
         </div>
         <div class="col-md-4">
-          <img src="https://via.placeholder.com/300" alt="Project 2">
+          <img src="https://via.placeholder.com/300" alt="Project 2" class="img-fluid">
           <h5 class="mt-2">Project 2</h5>
           <p>Short description of the project.</p>
         </div>
         <div class="col-md-4">
-          <img src="https://via.placeholder.com/300" alt="Project 3">
+          <img src="https://via.placeholder.com/300" alt="Project 3" class="img-fluid">
           <h5 class="mt-2">Project 3</h5>
           <p>Short description of the project.</p>
         </div>
