--- a/index.html
+++ b/index.html
@@ -3,22 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio with Dark/Light Mode</title>
+  <title>Olisemeka Nmarkwe</title>
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome CDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   <style>
     /* Global Styles */
     body {
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-    .light-mode {
-      background-color: #ffffff;
-      color: #212529;
-    }
-    .dark-mode {
       background-color: #121212;
       color: #f8f9fa;
     }
@@ -26,28 +21,53 @@
     /* Navbar */
     .navbar {
       backdrop-filter: blur(10px);
-      background-color: rgba(255, 255, 255, 0.1);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-      transition: background-color 0.3s ease, border-color 0.3s ease;
-    }
-    .dark-mode .navbar {
       background-color: rgba(0, 0, 0, 0.6);
-      border-color: rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+    .navbar .nav-link {
+      color: #f8f9fa;
+    }
+    .navbar .nav-link:hover {
+      color: #0d6efd;
     }
 
     /* Sections */
     section {
       padding: 80px 20px;
     }
+    h1, h2, h3 {
+      color: #f8f9fa;
+    }
+
+    /* Skills and Tools */
+    .skills, .tools {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .skills i, .tools i {
+      font-size: 2rem;
+      margin: 10px;
+      color: #0d6efd;
+    }
+
+    /* Buttons */
+    .btn-primary {
+      background-color: #0d6efd;
+      border-color: #0d6efd;
+    }
+    .btn-primary:hover {
+      background-color: #0056b3;
+      border-color: #0056b3;
+    }
 
     /* Footer */
     footer {
       text-align: center;
       padding: 20px;
-      background: rgba(0, 0, 0, 0.1);
-    }
-    .dark-mode footer {
       background: rgba(255, 255, 255, 0.1);
+    }
+    footer p {
+      color: #f8f9fa;
     }
   </style>
 </head>
@@ -65,6 +85,9 @@
             <a class="nav-link active" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#skills-tools">Skills & Tools</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
@@ -80,33 +103,50 @@
   <section id="about" class="text-center">
     <div class="container">
       <h1>About Me</h1>
-      <p>Hello! I'm a web developer passionate about creating clean, responsive designs.</p>
+      <p>Hello! I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. Proficient in Java, Python, SQL, and web development, I'm seeking a data science internship to apply my skills and gain valuable industry experience.</p>
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="projects">
+  <!-- Skills & Tools Section -->
+  <section id="skills-tools">
     <div class="container">
-      <h2 class="text-center mb-4">Projects</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <img src="https://via.placeholder.com/300" alt="Project 1" class="img-fluid">
-          <h5 class="mt-2">Project 1</h5>
-          <p>Short description of the project.</p>
-        </div>
-        <div class="col-md-4">
-          <img src="https://via.placeholder.com/300" alt="Project 2" class="img-fluid">
-          <h5 class="mt-2">Project 2</h5>
-          <p>Short description of the project.</p>
-        </div>
-        <div class="col-md-4">
-          <img src="https://via.placeholder.com/300" alt="Project 3" class="img-fluid">
-          <h5 class="mt-2">Project 3</h5>
-          <p>Short description of the project.</p>
-        </div>
+      <h2 class="text-center">Skills & Tools</h2>
+      <div class="skills">
+        <h3>Skills</h3>
+        <i class="fab fa-java" title="Java"> Java</i>
+        <i class="fab fa-js" title="JavaScript"> JavaScript</i>
+        <i class="fas fa-database" title="SQL"> SQL</i>
+        <i class="fab fa-python" title="Python"> Python</i>
+        <i class="fas fa-chart-line" title="SEO"> SEO</i>
+        <i class="fas fa-cogs" title="Oracle Apex"> Oracle Apex</i>
+        <i class="fas fa-brain" title="Predictive Modeling"> Predictive Modeling</i>
+        <i class="fas fa-users" title="Collaboration"> Collaboration</i>
+      </div>
+      <div class="tools mt-4">
+        <h3>Tools</h3>
+        <i class="fas fa-table" title="Pandas"> Pandas</i>
+        <i class="fas fa-chart-bar" title="Seaborn"> Seaborn</i>
+        <i class="fas fa-chart-pie" title="Matplotlib"> Matplotlib</i>
+        <i class="fas fa-brain" title="Sklearn"> Sklearn</i>
+        <i class="fas fa-database" title="Kaggle"> Kaggle</i>
       </div>
     </div>
   </section>
+
+<!-- Projects Section -->
+<section id="projects" class="projects">
+  <div class="container">
+    <h2 class="text-center mb-4">Projects</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="images\dither_it_module_PA4_cluster_TrainValidateData_CPz.csv.png" alt="EEG-features-clustering" class="img-fluid">
+        <h5 class="mt-2">EEG Clustering and Model Evaluation</h5>
+        <p>This repository contains a project focused on clustering EEG (electroencephalogram) features using KMeans, followed by performance evaluation and visualization. The goal is to assess different clustering metrics (e.g., cohesion, separation, silhouette score) and visualize the clustering results through various evaluation metrics.</p>
+        <a href="https://github.com/OliseNS/EEG-Clustering-Modeling" class="btn btn-primary">Check on <i class="fa-brands fa-square-github"></i></a>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section id="contact" class="text-center">
@@ -119,22 +159,11 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+    <p>&copy; 2024 Olisemeka Nmarkwe. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- JavaScript for Dark/Light Mode -->
-  <script>
-    const modeToggle = document.getElementById('modeToggle');
-    const body = document.body;
-
-    modeToggle.addEventListener('click', () => {
-      body.classList.toggle('dark-mode');
-      body.classList.toggle('light-mode');
-      modeToggle.textContent = body.classList.contains('dark-mode') ? 'Light Mode' : 'Dark Mode';
-    });
-  </script>
 </body>
 </html>
