--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     footer p {
       color: #f8f9fa;
     }
+
   </style>
 </head>
 <body class="light-mode">
@@ -104,6 +105,7 @@
     <div class="container">
       <h1>About Me</h1>
       <img src="images\dither_it_1.JPG" alt="Mr" class="img-fluid">
+    </div>
       <p>Hello! I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. Proficient in Java, Python, SQL, and web development, I'm seeking a data science internship to apply my skills and gain valuable industry experience.</p>
     </div>
   </section>
