--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills-tools">Skills & Tools</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -74,7 +74,7 @@
           <img src="images\dither_it_module_PA4_cluster_TrainValidateData_CPz.csv.png" alt="EEG Clustering" class="img-fluid">
           <h5 class="mt-2">EEG Clustering and Model Evaluation</h5>
           <p>Explore EEG feature clustering using KMeans and evaluate clustering metrics like cohesion and silhouette score.</p>
-          <a href="https://github.com/OliseNS/EEG-Clustering-Modeling" class="button"><i class="fab fa-github"> Github </i></a>
+          <button href="https://github.com/OliseNS/EEG-Clustering-Modeling" class="button"><i class="fab fa-github"></i> Github </button>
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@
     <div class="container">
       <h2>Contact</h2>
       <p>Feel free to reach out for collaborations or inquiries!</p>
-      <a href="mailto:example@example.com" class="button">Email Me</a>
+      <button href="mailto:example@example.com" class="button">Email Me</button>
     </div>
   </section>
 
