--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .hello-box {
       position: absolute;
       bottom: 10px;
-      right: 10px;
+      left: 10px;
       background: rgba(0, 0, 0, 0.7);
       color: #fff;
       padding: 5px 10px;
@@ -30,27 +30,25 @@
 </head>
 <body class="light-mode">
   <!-- Navbar -->
-  <nav class="navbar sticky-top bg-dark">
-  <div class="container">
-    <a class="navbar-brand text-white" href="#">Olisemeka Nmarkwe</a>
-    <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon" style="margin-top: 10px;"><i class="fa-solid fa-bars"></i></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link text-white" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#skills-tools">Skills & Tools</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
-      </ul>
+  <nav class="navbar navbar-expand-lg glassmorphic-navbar sticky-top">
+    <div class="container">
+      <a class="navbar-brand text-white" href="#">Olisemeka Nmarkwe</a>
+      <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="#about">Me</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#skills-tools">Skills</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-
+  </nav>
   <!-- About Section -->
   <section id="about" class="text-center py-5">
     <div class="container">
-      <h1>About Me</h1>
       <div class="about-image">
         <img src="images/dither_it_1.JPG" alt="Olisemeka Nmarkwe" class="img-fluid">
         <div class="hello-box" id="hello-message">Hello</div>
