--- a/index.html
+++ b/index.html
@@ -57,31 +57,72 @@
     </div>
   </section>
 
-  <!-- Skills & Tools Section -->
-  <section id="skills-tools" class="py-5">
-    <div class="container">
-      <h2 class="text-center">Skills & Tools</h2>
-      <div class="skills">
-        <h3>Skills</h3>
-        <div>
-          <i class="fab fa-java" title="Java"></i> Java
-          <i class="fab fa-js" title="JavaScript"></i> JavaScript
-          <i class="fas fa-database" title="SQL"></i> SQL
-          <i class="fab fa-python" title="Python"></i> Python
-          <i class="fas fa-chart-line" title="SEO"></i> SEO
-          <i class="fas fa-cogs" title="Oracle Apex"></i> Oracle Apex
-          <i class="fas fa-brain" title="Predictive Modeling"></i> Predictive Modeling
+<!-- Skills & Tools Section -->
+<section id="skills-tools" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Skills & Tools</h2>
+    <div class="row">
+      <!-- Skills -->
+      <div class="col-md-6">
+        <h3 class="text-center mb-3">Skills</h3>
+        <div class="skills-list">
+          <div class="skill-item">
+            <i class="fab fa-java"></i>
+            <span>Java</span>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-js"></i>
+            <span>JavaScript</span>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-database"></i>
+            <span>SQL</span>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-python"></i>
+            <span>Python</span>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-chart-line"></i>
+            <span>SEO</span>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-cogs"></i>
+            <span>Oracle Apex</span>
+          </div>
+          <div class="skill-item">
+            <i class="fas fa-brain"></i>
+            <span>Predictive Modeling</span>
+          </div>
         </div>
       </div>
-      <div class="tools mt-4">
-        <h3>Tools</h3>
-        <i class="fas fa-table" title="Pandas"></i> Pandas
-        <i class="fas fa-chart-bar" title="Seaborn"></i> Seaborn
-        <i class="fas fa-chart-pie" title="Matplotlib"></i> Matplotlib
-        <i class="fas fa-brain" title="Sklearn"></i> Sklearn
+
+      <!-- Tools -->
+      <div class="col-md-6">
+        <h3 class="text-center mb-3">Tools</h3>
+        <div class="tools-list">
+          <div class="tool-item">
+            <i class="fas fa-table"></i>
+            <span>Pandas</span>
+          </div>
+          <div class="tool-item">
+            <i class="fas fa-chart-bar"></i>
+            <span>Seaborn</span>
+          </div>
+          <div class="tool-item">
+            <i class="fas fa-chart-pie"></i>
+            <span>Matplotlib</span>
+          </div>
+          <div class="tool-item">
+            <i class="fas fa-brain"></i>
+            <span>Sklearn</span>
+          </div>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Projects Section -->
   <section id="projects" class="projects py-5">
