--- a/index.html
+++ b/index.html
@@ -46,16 +46,23 @@
       </div>
     </div>
   </nav>
-  <!-- About Section -->
-  <section id="about" class="text-center py-5">
-    <div class="container">
-      <div class="about-image">
-        <img src="images/dither_it_1.JPG" alt="Olisemeka Nmarkwe" class="img-fluid">
-        <div class="hello-box" id="hello-message">Hello</div>
-      </div>
-      <p>I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. Proficient in Java, Python, SQL, and web development, I'm seeking a data science internship to apply my skills and gain valuable industry experience.</p>
+<!-- About Section -->
+<section id="about" class="text-center py-5">
+  <div class="container">
+    <div class="about-image">
+      <img src="assets/dither_it_1.JPG" alt="Olisemeka Nmarkwe" class="img-fluid">
+      <div class="hello-box" id="hello-message">Hello</div>
     </div>
-  </section>
+    <p>
+      I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. 
+      Proficient in Java, Python, SQL, and web development, I'm seeking a data science internship to apply my skills and gain valuable industry experience.
+    </p>
+    <a href="assets/resume.pdf" class="btn btn-dark mt-3" download>
+      <i class="fas fa-download"></i> Download Resume
+    </a>
+  </div>
+</section>
+
 
 <!-- Skills & Tools Section -->
 <section id="skills-tools" class="py-5">
@@ -130,7 +137,7 @@
       <h2 class="text-center mb-4">Projects</h2>
       <div class="row">
         <div class="col-md-4">
-          <img src="images/dither_it_module_PA4_cluster_TrainValidateData_CPz.csv.png" alt="EEG Clustering" class="img-fluid">
+          <img src="assets/dither_it_module_PA4_cluster_TrainValidateData_CPz.csv.png" alt="EEG Clustering" class="img-fluid">
           <h5 class="mt-2">EEG Clustering and Model Evaluation</h5>
           <p>Explore EEG feature clustering using KMeans and evaluate clustering metrics like cohesion and silhouette score.</p>
           <a href="https://github.com/OliseNS/EEG-Clustering-Modeling" class="btn btn-dark"><i class="fab fa-github"></i> Github</a>
