--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <style>
     .hello-box {
       position: absolute;
-      bottom: 10px;
+      bottom: 50px;
       left: 10px;
-      background: rgba(0, 0, 0, 0.7);
+      background: #eec35e;
       color: #fff;
       padding: 5px 10px;
-      border-radius: 5px;
-      font-size: 14px;
+      border-radius: 2px;
+      font-size: 2rem;
+      height: 10px;
     }
     .about-image {
       position: relative;
