--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <style>
     .hello-box {
       position: absolute;
-      bottom: 50px;
-      left: 10px;
+      bottom:3rem;
+      left: 2rem;
       background: #eec35e;
       color: #fff;
       padding: 5px 10px;
@@ -49,22 +49,30 @@
       </div>
     </div>
   </nav>
-<!-- About Section -->
-<section id="about" class="text-center py-5">
-  <div class="container">
-    <div class="about-image">
-      <img src="assets/dither_it_1.JPG" alt="Olisemeka Nmarkwe" class="img-fluid">
+
+<section>
+<div class="container mt-5">
+  <div class="row align-items-center">
+   
+    <div class="about-image text-lg-start">
+      <img src="assets/dither_it_1.JPG" alt="Olisemeka Nmarkwe" class="img-fluid mb-3">
       <div class="hello-box" id="hello-message">Hello</div>
     </div>
-    <p>
-      I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. 
+
+    <!-- Right Column: Introduction Text -->
+    <div class="col-lg-6">
+      <p class="introduction-text">
+        I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. 
       Proficient in Java, Python, SQL, and web development, I'm seeking a data science internship to apply my skills and gain valuable industry experience.
-    </p>
-    <a href="assets/resume.pdf" class="btn btn-dark mt-3" download>
-      <i class="fas fa-download"></i> Download Resume
-    </a>
+      </p>
+      <a href="assets/resume.pdf" class="btn btn-dark mt-3" download>
+        <i class="fas fa-download"></i> Download Resume
+      </a>
+    </div>
   </div>
+</div>
 </section>
+
 
 
 <!-- Skills & Tools Section -->
