--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .hello-box {
       position: absolute;
       bottom:3rem;
-      left: 2rem;
+      left: 1.8rem;
       background: #eec35e;
       color: #fff;
       padding: 5px 10px;
@@ -41,7 +41,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="#about">Me</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#me">Me</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#skills-tools">Skills</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
@@ -51,7 +51,7 @@
   </nav>
 
 <section>
-<div class="container mt-5">
+<div class="container mt-0" id="me">
   <div class="row align-items-center">
    
     <div class="about-image text-lg-start">
