--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
           <p>Explore EEG feature clustering using KMeans and evaluate clustering metrics like cohesion and silhouette score.</p>
           <a href="https://github.com/OliseNS/EEG-Clustering-Modeling" class="btn btn-dark"><i class="fab fa-github"></i> Github</a>
         </div>
+
+        <div class="col-md-4">
+          <img src="assets\dither_it_epoch_vs_loss_P3.png" alt="EpochVsLoss" class="img-fluid">
+          <h5 class="mt-2">EEG Classification with ANN and Model Comparison</h5>
+          <p>Developed an ANN for EEG classification with optimized architecture and compared its performance against Decision Tree, KNN, and SVM models using key metrics and visualizations.</p>
+          <a href="https://github.com/OliseNS/EEG-Model-and-Comparison" class="btn btn-dark"><i class="fab fa-github"></i> Github</a>
+        </div>
       </div>
     </div>
   </section>
