--- a/index.html
+++ b/index.html
@@ -186,7 +186,20 @@
   <!-- Custom Script for Changing Hello Message -->
   <script>
     const helloMessage = document.getElementById("hello-message");
-    const messages = ["Hello", "नमस्ते", "Bonjour", "Hola", "こんにちは"];
+    const messages = [
+    "Hello",          // English
+    "नमस्ते",          // Nepali
+    "Ndewo",          // Igbo
+    "Ciao",           // Italian
+    "Bonjour",        // French
+    "Hola",           // Spanish
+    "こんにちは",       // Japanese
+    "Guten Tag",      // German
+    "Привет",         // Russian
+    "Olá",            // Portuguese
+    "Kamusta",        // Filipino
+];
+
     let index = 0;
 
     setInterval(() => {
