--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         I'm Olisemeka Nmarkwe, a motivated computer science student with a passion for data analysis and machine learning. 
       Proficient in Java, Python, SQL, and web development, I'm seeking a data science internship to apply my skills and gain valuable industry experience.
       </p>
-      <a href="assets/Resume.pdf" class="btn btn-dark mt-3" download>
+      <a href="assets/Olisemeka's CS 2025.pdf" class="btn btn-dark mt-3" download> 
         <i class="fas fa-download"></i> Download Resume
       </a>
     </div>
