--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Olisemeka Nmarkwe</title>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <!-- Bootstrap CDN -->
   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LceuawqAAAAAPAlZodH7byRLn9iqfWjf2eeTM5G"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -171,7 +170,7 @@
   <div class="container">
     <h2>Contact</h2>
     <p>Feel free to email me or fill out the form below for collaborations or inquiries!</p>
-    <a href="mailto:example@example.com" class="btn btn-dark">Email Me</a>
+    <a href="mailto:olisemekanmarkwe@gmail.com" class="btn btn-dark">Email Me</a>
   </div>
 
   <div class="custom-form">
@@ -205,7 +204,7 @@
       ></textarea>
 
       <!-- Google reCAPTCHA -->
-      <div class="g-recaptcha" data-sitekey="6LceuawqAAAAAPAlZodH7byRLn9iqfWjf2eeTM5G"></div>
+      <div class="g-recaptcha" data-sitekey="6LceuawqAAAAAPAlZodH7byRLn9iqfWjf2eeTM5G" data-callback="onSubmit"></div>
 
       <button type="submit">Submit</button>
     </form>
@@ -222,37 +221,30 @@
     </div>
   </div>
 
+  <script src="https://www.google.com/recaptcha/api.js?render=6LceuawqAAAAAPAlZodH7byRLn9iqfWjf2eeTM5G"></script>
+  
   <script>
+    // reCAPTCHA v3 - callback function when form is submitted
+    function onSubmit(token) {
+      document.getElementById('contact-form').submit();
+    }
+
     function submitForm(event) {
-      event.preventDefault(); // Prevent page redirect
-
-      const recaptchaResponse = grecaptcha.getResponse();
-      if (!recaptchaResponse) {
-        alert("Please complete the reCAPTCHA.");
-        return;
-      }
-
-      const formData = new FormData(document.getElementById('contact-form'));
-      formData.append('g-recaptcha-response', recaptchaResponse); // Add reCAPTCHA response to the form data
-
-      // Send the form data using fetch
-      fetch('https://docs.google.com/forms/d/e/1FAIpQLSde9CJry3MXK286iR9AHMVD6uDOrrCKMlpCv5gWp1qh_hltPw/formResponse', {
-        method: 'POST',
-        body: formData
-      })
-      .then(response => {
-        if (response.ok) {
-          document.getElementById('liveToast').style.display = 'block';
-          document.getElementById('toast-body').innerText = 'Your message has been sent successfully!';
-          document.getElementById('contact-form').reset();
-        } else {
-          document.getElementById('toast-body').innerText = 'Oops, something went wrong!';
-          document.getElementById('liveToast').style.display = 'block';
-        }
-      })
-      .catch(error => {
-        document.getElementById('toast-body').innerText = 'There was an error with your submission. Please try again later.';
-        document.getElementById('liveToast').style.display = 'block';
+      event.preventDefault(); // Prevent form from submitting immediately
+      
+      grecaptcha.ready(function() {
+        grecaptcha.execute('6LceuawqAAAAAPAlZodH7byRLn9iqfWjf2eeTM5G', {action: 'submit'}).then(function(token) {
+          // Add the reCAPTCHA token to the form before submitting
+          var form = document.getElementById('contact-form');
+          var input = document.createElement('input');
+          input.type = 'hidden';
+          input.name = 'g-recaptcha-response';
+          input.value = token;
+          form.appendChild(input);
+          
+          // Submit the form after adding the token
+          form.submit();
+        });
       });
     }
   </script>
