--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="footer-header text-center">
       <h3>Get in Touch</h3>
       <button class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
-        Contact Me
+        Say hi!!
       </button>
     </div>
     <div class="row footer-columns justify-content-center">
@@ -186,6 +186,8 @@
           <li><a href="#me">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Now</a></li>
+          <li> still in progress...
+          </li>
         </ul>
       </div>
       <div class="col-md-4 col-6 footer-column text-center">
