--- a/index.html
+++ b/index.html
@@ -186,8 +186,6 @@
           <li><a href="#me">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Now</a></li>
-          <li> still in progress...
-          </li>
         </ul>
       </div>
       <div class="col-md-4 col-6 footer-column text-center">
@@ -195,14 +193,13 @@
         <ul class="footer-links">
           <li><a href="https://github.com/OliseNS" target="_blank">GitHub</a></li>
           <li><a href="mailto:olisemekanmarkwe@gmail.com">Email</a></li>
-          <li><a href="assets/Olisemeka's CS 2025.pdf" download>Resume</a></li>
         </ul>
       </div>
       <div class="col-md-4 col-12 footer-column text-center">
         <h4>Follow Me</h4>
         <ul class="footer-links">
-          <li><a href="https://linkedin.com/in/olisemeka" target="_blank">LinkedIn</a></li>
-          <li><a href="https://twitter.com/Olisemeka" target="_blank">Twitter</a></li>
+          <li><a href="" target="_blank">LinkedIn</a></li>
+          <li><a href="" target="_blank">Twitter</a></li>
         </ul>
       </div>
     </div>
