--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
       <p class="flashing-text">More Coming Soon!!!</p>
        <style> 
       @keyframes flash {
-        0% { color: red; }
-        25% { color: blue; }
-        50% { color: green; }
-        75% { color: orange; }
-        100% { color: purple; }
+        50% { color: white; }
+        100% { color: #eec35e; }
+        
       }
 
       .flashing-text {
