--- a/index.html
+++ b/index.html
@@ -169,33 +169,33 @@
 
 
 <!-- Contact Section -->
-<footer class="footer">
+  <style>
+    .footer {
+      border-top: 2px solid #333;
+    }
+  </style>
+<footer class="footer py-5">
   <div class="container">
-    <div class="footer-header text-center">
-      <h3>Get in Touch</h3>
-      <button class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
-        Say hi!!
-      </button>
-    </div>
-    <div class="row footer-columns justify-content-center">
-      <div class="col-md-4 col-6 footer-column text-center">
+    <div class="row text-center">
+      <div class="col-md-4 mb-3 mb-md-0">
+        <h3>Get in Touch</h3>
+        <button  class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#contactModal">
+          <span class="flashing-text">Say Hello!!!</span>
+        </button>
+      </div>
+      <div class="col-md-4 mb-3 mb-md-0">
         <h4>Navigation</h4>
-        <ul class="footer-links">
+        <ul class="footer-links list-unstyled">
           <li><a href="#me">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Now</a></li>
         </ul>
       </div>
-      <div class="col-md-4 col-6 footer-column text-center">
+      <div class="col-md-4">
         <h4>Connect</h4>
-        <ul class="footer-links">
+        <ul class="footer-links list-unstyled">
           <li><a href="https://github.com/OliseNS" target="_blank">GitHub</a></li>
           <li><a href="mailto:olisemekanmarkwe@gmail.com">Email</a></li>
-        </ul>
-      </div>
-      <div class="col-md-4 col-12 footer-column text-center">
-        <h4>Follow Me</h4>
-        <ul class="footer-links">
           <li><a href="" target="_blank">LinkedIn</a></li>
           <li><a href="" target="_blank">Twitter</a></li>
         </ul>
@@ -206,7 +206,6 @@
     </div>
   </div>
 </footer>
-
 
 <!-- Contact Modal -->
 <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
