--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
 
 
 
+<script src="https://tinylytics.app/embed/nzEHpyHjcyNeFdoSXqeW.js" defer></script>
+
 <!-- Contact Section -->
   <style>
     .footer {
